Refactor product mngmt